# WeatherAlertSystem

./: LICENSE  README.md  config.example.yaml  install.sh  pyproject.toml
docs/: CountyCodes.md  EventTypes.md  managed_dvswitch.md  managed_openbridge.md
examples/: managed_dvswitch.yaml  managed_openbridge.yaml  simple.yaml
scripts/: install_dependencies.sh  migrate_to_weather_alert_system.sh  update_county_codes.sh
skyalert_bridge/: announcer.py  app.py  audio.py  cli.py  config.py  control.py  dmr_packetizer.py  encoder.py  helpers.py  logutil.py  managed_openbridge.py  models.py  nws.py  openbridge.py  process_manager.py  state.py  transmitters.py  tts.py  usrp.py
systemd/: weather-alert-system.service
tests/: test_announcement.py  test_config.py  test_control.py  test_hbp_forwarder.py  test_managed_bridge.py  test_openbridge.py  test_openbridge_egress.py  test_queue_scheduler.py  test_state_repeat.py  test_tts_voicerss.py
tools/: wav_to_ambe72_stub.py
